--- a/src/Jili/BackendBundle/Resources/views/Taobao/PromotionSelfProduct/menu.html.twig
+++ b/src/Jili/BackendBundle/Resources/views/Taobao/PromotionSelfProduct/menu.html.twig
@@ -1,7 +1,7 @@
 
 
-<div>
+<div align="right">
 <h4>Menu</h4>
 <a href="{{ path('jili_backend_admintaobao_listpromotionselfproduct') }}">浏览</a> <br />
-<a href="{{ path('jili_backend_admintaobao_addpromotionselfproduct') }}">新建</a>
+<a href="{{ path('jili_backend_admintaobao_newpromotionselfproduct') }}">新建</a>
 </div>
