--- a/src/Jili/FrontendBundle/Resources/views/Home/index.html.twig
+++ b/src/Jili/FrontendBundle/Resources/views/Home/index.html.twig
@@ -34,8 +34,8 @@
             <div class="ttLink mt20"><span>--------------------</span><a class="fontYH font16" href="{{ path('_user_login') }}" title="直接登录">直接登录</a><span>--------------------</span></div>
             <div class="quickLog lightGray mt5"> 
                 用第三方账号快速登录：
-                <a href="{{ path('qq_api_login') }}" class="logIcon" title="用第三方账号快速登录"></a>
-                <a href="{{ path('taobao_login') }}" class="logIcon" title="用第三方账号快速登录"></a>
+                <a href="{{ path('qq_api_login') }}" class="logIcon" title="用QQ账号快速登录"></a>
+                <a href="{{ path('taobao_login') }}" class="tblogIcon" title="用淘宝账号快速登录"></a>
             </div>
         </div>
         {% else %}
