--- a/web/css/regStep.css
+++ b/web/css/regStep.css
@@ -347,6 +347,9 @@
 .qqReg input[type='text'].qqEmail{
 	width: 120px;
 }
+.qqReg input[type='text'].taobaoEmail{
+	width: 180px;
+}
 .qqReg .errorMsg{
 	color: #fb2c03;
 	margin: 0 0 0 5px;
@@ -393,6 +396,7 @@
 .qqMsg{
 	background-color: #fbfbfb;
 	padding: 10px 20px;
+	margin-top: 10px;
 }
 .qqPic{
 	float: right;
