--- a/src/Jili/BackendBundle/Resources/views/Taobao/PromotionSelfProduct/list.html.twig
+++ b/src/Jili/BackendBundle/Resources/views/Taobao/PromotionSelfProduct/list.html.twig
@@ -16,6 +16,9 @@ Taobao自助推广列表-{{ parent() }}
 
 
 <h3 align="center">Taobao自助推广单品</h3>
+
+{% include("JiliBackendBundle::session_notification.html.twig") %}
+
 <table>
     <tr>
         <td>商品title</td>
