--- a/src/Jili/FrontendBundle/Resources/views/DecemberActivity/index.html.twig
+++ b/src/Jili/FrontendBundle/Resources/views/DecemberActivity/index.html.twig
@@ -36,6 +36,7 @@
                 <p>我当前拥有金蛋的个数：<strong class="eggNum"></strong>抢下一个金蛋所需消费淘宝金额：<strong class="eggMoney"></strong></p>
                 <div class="noStart"><img src="{{ asset('images/december/noegg.gif')}}" width="400" height="200" alt="您还没有金蛋哦"></div>
                 <div class="mask">
+                	<div class="hammer"></div>
                     <ul class="goldenEggs clearfix">
                     </ul>
                 </div>
