--- a/src/Jili/FrontendBundle/Resources/views/DecemberActivity/index.html.twig
+++ b/src/Jili/FrontendBundle/Resources/views/DecemberActivity/index.html.twig
@@ -30,7 +30,7 @@
 </div>
 <div class="decMain">
     <div class="decMainCon">
-    {% if  date() < date("2015-01-07 17:10:00")  %}
+    {% if  date() < date("2015-1-20 00:00:00")  %}
         <div class="luckyDraw clearfix">
             {% if app.session.has('uid') %}
             <div class="luckyDrawL">
@@ -119,6 +119,7 @@
         </div>
     </div>
 </div>
+{% if  date() < date("2015-1-20 00:00:00")  %}
 <div class="decRule">
 	<div class="decRuleBtn">如何抢到金蛋<br/>>></div>
 	<div class="decRuleFlow boderBot">
@@ -154,6 +155,8 @@
             <p>注：最终奖励名额可根据实际情况进行调整。<br/>积粒网保留在法律规定的范围内对上述规则进行解释的权利。</p>
     </div>
 </div>
+{% else %}
+{% endif %}
 {% include '::analytics_js.html.twig' %} 
 </body>
 </html>
