--- a/src/Jili/ApiBundle/Resources/views/Admin/menu.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Admin/menu.html.twig
@@ -723,6 +723,7 @@
             </TR>
         </TABLE>
         {%include "JiliBackendBundle:GameEggsBreaker:backend_menu_partial.html.twig" %}
+        {%include "JiliBackendBundle:ActivityGathering:backend_menu_partial.html.twig" %}
         </TD>
     </TR>
 </TABLE>
