--- a/src/Jili/ApiBundle/Resources/views/MonthActivity/Gathering/index.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/MonthActivity/Gathering/index.html.twig
@@ -6,7 +6,12 @@
 </head>
 <body>
     
-
+    <div>
+        {{ render(controller("JiliApiBundle:MonthActivity:gatheringAddTaobaoOrder") ) }}
+    </div>
+    <div>
+        {{ render(controller("JiliApiBundle:MonthActivity:gatheringCheckin") ) }}
+    </div>
 </body>
 </html>
 
