#618 design changed, remove unnessary codes

--- a/src/Jili/ApiBundle/Resources/views/MonthActivity/Gathering/taobao_order_form.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/MonthActivity/Gathering/taobao_order_form.html.twig
@@ -1,8 +1,18 @@
-<form action="{{ path('jili_api_monthactivity_gatheringsavetaobaoorder') }}" method="POST">
-{{ form_label(form.orderIdentity)}}
-{{ form_widget(form.orderIdentity)}}
-{{ form_errors(form.orderIdentity)}}
+{% if isChecked defined and isChecked == true %}
+<div>
+    你已经提交过
+</div>
+{% else %}
 
-{{ form_rest(form)}}
-<input type="submit" value="提交" />
+{% if form is defined %}
+<form action="{{ path('jili_api_monthactivity_gatheringsavetaobaoorder') }}" method="POST">
+    {{ form_label(form.orderIdentity)}}
+    {{ form_widget(form.orderIdentity)}}
+    {{ form_errors(form.orderIdentity)}}
+
+    {{ form_rest(form)}}
+    <input type="submit" value="提交" />
 </form>
+{% endif %}
+{% endif %}
+
