--- a/src/Jili/ApiBundle/Resources/views/MonthActivity/Gathering/index.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/MonthActivity/Gathering/index.html.twig
@@ -5,10 +5,15 @@
     <title></title>
 </head>
 <body>
-    
     <div>
+        <a href="#">去购物</a>
+    </div> 
+
+    <div>
+        <h3> 参加活动</h3>
         {{ render(controller("JiliApiBundle:MonthActivity:gatheringAddTaobaoOrder") ) }}
     </div>
+
 </body>
 </html>
 
