--- a/src/Jili/ApiBundle/Resources/views/MonthActivity/Gathering/index.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/MonthActivity/Gathering/index.html.twig
@@ -1,26 +1,46 @@
 <!DOCTYPE HTML>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title></title>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="keywords" content="积粒,积粒网,91积粒网,返利网,返利,返现,超级返,购物返利,商城返利,淘宝,淘宝返利,京东返利,积分,积分商城,网购返利,91jili.com">
+    <meta name="description" content="积粒网，轻松积米粒，快乐换奖励！拥有游戏体验，体验广告，购物返利，商家活动几大板块，网站的货币为米粒，在享受众多商城最优惠价格同时还可从积粒网获得不同比率的现金奖励！积粒网让你省得多，赚得也更多！">
+    <title>积粒网-1月活动</title>
+    <link type="text/css" rel="stylesheet" href="{{ asset('css/jl.ui.Jan.css')}}"/>
+    <script src="{{ asset('js/jquery-1.10.2.js')}}" type="text/javascript"></script>
+	<script src="{{ asset('bundles/fosjsrouting/js/router.js') }}"></script>
+    <script src="{{ path('fos_js_routing_js', {"callback": "fos.Router.setData"}) }}"></script>
+    <script src="{{ asset('js1408/jl.ui.jan.js')}}" type="text/javascript"></script>
 </head>
+
 <body>
-    <div>
-        <a href="#">去购物</a>
-    </div> 
-
-    <div>
-        <h3> 参加活动</h3>
-        {{ render(controller("JiliApiBundle:MonthActivity:gatheringAddTaobaoOrder") ) }}
+<div class="top">
+	<div class="topCon">
+    	<div class="logo fl"><a href="http://www.91jili.com/" title="积粒网"><img src="{{ asset('images1408/logo.png')}}" width="160" height="46" alt="积粒网logo"/></a></div>
+        {% if app.session.has('uid') %}
+        	<div class="userInfo fr">{{ app.session.get('nick') }},[<a href="{{ path('_user_logout') }}">退出</a>]</div>
+        {% else %}
+        	<div class="userInfo fr">您好，请<a href="{{ path('_user_login')}}">登录</a></div>
+        {% endif %}
     </div>
-
+</div>
+<div class="main">
+	<div class="mainTop">
+        <div class="mainTopCon">
+            <div class="splitLv">
+                <div class="splitLvCon">
+                    <div class="splitLvImg"><img src="{{ asset('images/january/lv1.png')}}" width="614" height="387" alt="万人抢红包"/></div>
+                    <div class="splitLvTxt">再拼<span class="needNum"></span>单，瓜分<strong><img src="{{ asset('images/january/lv1Txt.png')}}" width="104" height="34" /></strong>米粒</div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="mainCon">
+        <div class="con">
+        	{{ render(controller("JiliApiBundle:MonthActivity:gatheringAddTaobaoOrder") ) }}
+            <div class="activityIntro"><img src="{{ asset('images/january/info.png')}}" width="759" height="159"/></div>
+        </div>
+    </div>
+</div>
+{% include '::analytics_js.html.twig' %} 
 </body>
 </html>
-
-<!--
-
-anayltics
-checkin form
-add order form
-
--->
