--- a/web/css/jl.ui.Jan.css
+++ b/web/css/jl.ui.Jan.css
@@ -19,13 +19,13 @@ a{text-decoration:none;color:#3399ff;}
 .splitLv{ height: 542px; background: url(../images/january/bannerBg.png) no-repeat;}
 .splitLvCon{ position: relative; z-index: 1; width: 614px; padding-top: 155px; margin: 0 auto;}
 .splitLvImg{ text-align: center;}
-.splitLvTxt{ position: absolute; z-index: 1000; bottom: 113px; left: 160px; line-height: 45px; font-size: 15px; font-weight: bold;}
+.splitLvTxt{ position: absolute; z-index: 1000; bottom: 113px; width: 100%; text-align: center; line-height: 45px; font-size: 15px; font-weight: bold;}
 .splitLvTxt b, .splitLvTxt span, .splitLvTxt strong{ display: inline-block; *display: inline; *zoom: 1; vertical-align: middle;}
 .splitLvTxt b{ position: relative; z-index: 1; width: 22px; height: 33px; line-height: 33px; margin-right: 1px; margin-top: -2px; background-color: #000; border-radius: 3px; overflow: hidden;}
 .splitLvTxt b span{ position: absolute; z-index: 1000; top: 0; left: 0; width: 22px; height: 330px; background: url(../images/january/num.png) no-repeat;}
 .splitLvTxt strong{ color: #e00000; line-height: 37px;}
-.splitLv2Txt{ bottom: 183px; left: 160px;}
-.splitLv3Txt{ bottom: 253px; left: 165px;}
+.splitLv2Txt{ bottom: 183px;}
+.splitLv3Txt{ bottom: 253px;}
 .mainCon{ height: 667px; padding-top: 50px; background: #fbb51f url(../images/january/conBg.jpg) no-repeat top center;}
 .shoppingForm li{ position: relative; z-index: 1; line-height:30px;}
 .shoppingForm li.tips{ font-family: "宋体"; font-size: 12px; color: #ff0000; height: 18px; line-height: 18px;}
