--- a/src/Jili/FrontendBundle/Resources/views/Home/index.html.twig
+++ b/src/Jili/FrontendBundle/Resources/views/Home/index.html.twig
@@ -8,6 +8,7 @@
 <script src="{{ asset('js1408/jquery.cookie.js') }}" type="application/javascript"></script>
 <script src="{{ asset('js1408/jl.ui.home.js') }}" language="javascript"></script>
 <script src="{{ asset('js1408/jl.ui.countdown.js') }}" language="javascript"></script>
+<script src="{{ asset('js1408/jl.ui.jan.js')}}" type="text/javascript"></script>
 {% endblock %}
  
 {% block body %}
